--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <body onload="call()">
     <main>
-      <div id="adviceNum">Advice # ADVICE ID</div>
-      <div id="string">Advice text</div>
+      <div id="adviceNum"></div>
+      <div id="string">Let me see...</div>
       <div id="divider">
         <img
           id="dividerMobile"
